--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=JobTrackerDb;Trusted_Connection=True;"
+    "DefaultConnection": "UseDevelopmentConnectionString"
   },
   "Logging": {
     "LogLevel": {
