--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "UseDevelopmentConnectionString"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
